--- a/config/database.yml
+++ b/config/database.yml
@@ -8,6 +8,13 @@ development:
   database: db/development.sqlite3
   pool: 5
   timeout: 5000
+# development:
+#     adapter: sqlserver
+#     host: SQL2008.col.missouri.edu
+#     database: MUDoITSitesUsageDB
+#     username: UMC-USERS\mudoitsitesusagedb
+#     password: Y5QFVG?g3U.J
+#     timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -23,3 +30,11 @@ production:
   database: db/production.sqlite3
   pool: 5
   timeout: 5000
+  
+staging:
+    adapter: sqlserver
+    host: SQL2008.col.missouri.edu
+    database: MUDoITSitesUsageDB
+    username: UMC-USERS\mudoitsitesusagedb
+    password: Y5QFVG?g3U.J
+    timeout: 5000
